name-overflow fix1

--- a/src/Pages/Disk/Disk.module.css
+++ b/src/Pages/Disk/Disk.module.css
@@ -105,7 +105,7 @@
 .nameFieldRight{
     display: flex;
     justify-content:space-between;
-    margin-right:  10px;
+    margin-right:  150px;
 }
 .openFolders{
     display: flex;
